--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,53 @@
     }
   }
 }
+
+.p-datepicker-calendar thead tr th {
+  font-size: 11px;
+  color: #3a3a3a;
+}
+
+.p-datepicker-calendar tbody tr td span {
+  font-size: 12px;
+  color: #5a6a85;
+  border-radius: 50%;
+  height: 24px;
+  width: 24px;
+  margin: auto;
+}
+
+.p-datepicker-calendar tbody tr td span:hover {
+  background-color: #5a6a85;
+  color: white;
+}
+
+.p-datepicker-header {
+  margin-bottom: 10px;
+}
+
+.p-datepicker-title {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.p-datepicker table td > span.p-highlight {
+  background: #5a6a85;
+  color: white;
+}
+
+.p-datepicker table td.p-datepicker-today > span {
+  background: #ced4da;
+}
+
+.notification-scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.notification-scroll::-webkit-scrollbar-track {
+  background: #f4f4f4;
+}
+
+.notification-scroll::-webkit-scrollbar-thumb {
+  background: #d9d9d9;
+}
